# YieldTrust-Contracts

./: .env.example  .prettierignore  .prettierrc  .solhint.json  Cargo.toml  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: test.yml
contracts/admin/: dead_mans_switch.rs  dead_mans_switch_test.rs  lib.rs
contracts/compliance/src/: lib.rs
contracts/grant_stream/: Cargo.toml
contracts/grant_stream/src/: donor_reputation.rs  matching_pool.rs  test_donor_reputation.rs  test_matching_pool.rs
contracts/zk_kyc/src/: lib.rs
src/: index.js  lib.rs
src/adapters/: onChainAdapter.js
src/routes/: escrow.js
src/services/: escrowRead.js  escrowWrite.js
tests/: escrow.legalhold.test.js  onChainAdapter.test.js
