[package]
name = "grant_stream"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[features]
legacy-tests = []

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
proptest = "1.0"
ed25519-dalek = "3.0.0"
